--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "dependencies": {
     "buefy": "^0.8.17",
     "flickity": "^2.2.1",
-    "gridsome": "^0.7.0"
+    "gridsome": "^0.7.0",
+    "v-viewer": "^1.5.1"
   },
   "devDependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.5.0",
     "bulma": "^0.8.2",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2"
   }
 }
